--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -4,4 +4,9 @@
     <!-- Start Home Screen -->
     <string name="start_home_skku">SKKU</string>
     <string name="start_home_login">Log In</string>
+    <!-- Start LogIn Screen -->
+    <string name="start_login_skku">SKKU</string>
+    <string name="start_login_token">Token</string>
+    <string name="start_login_token_help">What is Token?</string>
+    <string name="start_login_confirm">Confirm</string>
 </resources>
