--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -8,5 +8,13 @@
     <string name="start_login_skku">SKKU</string>
     <string name="start_login_token">Token</string>
     <string name="start_login_token_help">What is Token?</string>
-    <string name="start_login_confirm">Confirm</string>
+    <string name="start_login_login">Log In</string>
+    <string name="start_login_token_help_title">What is Token?</string>
+    <!--TODO--> <string name="start_login_token_help_message">"Tokens are provided by i-Campus… You can obtain it here…"</string>
+    <string name="start_login_token_help_dismiss">Dismiss</string>
+    <string name="start_login_token_help_issue">Issue Token</string>
+    <string name="start_login_login_loading">Loading</string>
+    <string name="start_login_login_failed_title">Log In Failed</string>
+    <string name="start_login_login_failed_message">Login failed. Please check your internet connection or verify that the token value was entered correctly.</string>
+    <string name="start_login_login_failed_dismiss">Dismiss</string>
 </resources>
