--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,10 +1,10 @@
 <resources>
     <string name="app_name">SKKU Helper</string>
 
-    <!-- Start Home Screen -->
+    <!-- StartActivity - HomeFragment -->
     <string name="start_home_skku">SKKU</string>
     <string name="start_home_login">Log In</string>
-    <!-- Start LogIn Screen -->
+    <!-- StartActivity - LogInFragment -->
     <string name="start_login_skku">SKKU</string>
     <string name="start_login_token">Token</string>
     <string name="start_login_token_help">What is Token?</string>
@@ -18,4 +18,8 @@
     <string name="start_login_login_failed_title">Log In Failed</string>
     <string name="start_login_login_failed_message">Login failed. Please check your internet connection or verify that the token value was entered correctly.</string>
     <string name="start_login_login_failed_dismiss">Dismiss</string>
+    <!-- MainActivity -->
+    <string name="main_menu_calendar">Calendar</string>
+    <string name="main_menu_home">Home</string>
+    <string name="main_menu_account">Account</string>
 </resources>
