Feat: StartActivity ViewModel, Canvas LMS API Features

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -22,4 +22,5 @@
     <string name="main_menu_calendar">Calendar</string>
     <string name="main_menu_home">Home</string>
     <string name="main_menu_account">Account</string>
+    <string name="main_message_auto_login">Automatic LogIn Success!</string>
 </resources>
