--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -24,6 +24,11 @@
     <string name="main_menu_account">Account</string>
     <string name="main_message_auto_login">Automatic LogIn Success!</string>
 
+    <!-- AssignmentActivity -->
+    <string name="assignment_menu_delete">Delete</string>
+    <string name="assignment_menu_edit">Edit</string>
+    <string name="assignment_menu_check">Check</string>
+
     <!-- ETC -->
     <string name="dialog_loading_message">Loading</string>
 </resources>
