Design: 홈 화면 로딩 UI

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -20,6 +20,7 @@
 
     <!-- MainActivity -->
     <!-- MainActivity - Home -->
+    <string name="main_home_loading">Loading Assignments...</string>
     <string name="main_home_left_assignments">Left Assignments</string>
     <string name="main_home_completed_assignments">Completed Assignments</string>
     <string name="main_home_expired_assignments">Expired Assignments</string>
